Fix too big border-radius

--- a/app/src/component/style/CreateTask.scss
+++ b/app/src/component/style/CreateTask.scss
@@ -15,7 +15,7 @@
 	align-items: center;
 	width: 3em;
 	height: 3em;
-	border-radius: 3em;
+	border-radius: 1.5em;
 }
 
 .CreateTask-icon {
